# stochasticConvectionDiffusion-MLE

./: LICENSE  README.md  docs.md
data/: MatrixA.csv  MatrizA.mat
src/Fortran/: CMakeLists.txt  CargarDatos.f90  data  main.f90  main_FBL.f90  mod_generators.f90  multiva.f90
src/Fortran/src/: CMakeLists.txt  CargarDatos.f90  main.f90  mod_par_generators.f90  mod_sde_coefficients.f90  mod_sde_solver.f90  multiva_cv.f90
src/Fortran/src/sto-convection-diffusion/: matrix_mult.f90  mod_generators.f90  mod_par_generators.f90  mod_random_number_generator.f90  mod_sde_coefficients.f90  mod_stochastic_numerics.f90
src/Fortran/src/sto-convection-diffusion/sto_convection_diff/: sto_convection_diff.cbp  sto_convection_diff.depend  sto_convection_diff.layout
src/Fortran/src/winner_samplemr/: main.f90  mkl_vsl.f90  winner  winner_samplemr.cbp
src/Matlab/: CoefficientsUijkl.m  v1.m  v2.m
visualization/velocity_vector_field/: CampoDeVectores.eps  MatrizAGrafica.eps
